compiler/tests/invalid_programs/invalid_return.jm
!TypeError

def foo() -> Int
  return
end

puts(foo())
